Add documentation for compiler error C2956 and update error text (#4176)
* Add documentation for compiler error C2956 and update error text

* Add TOC entry

* Update for grammar and my own comprehension.

Sometimes, you just get carried away. This version could use some simplification.

* Simplify.

Address remarks, attempt simplification.
Acrolinx all the things.

* More updates per review

Co-authored-by: Colin Robertson <corob@microsoft.com>

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -1915,6 +1915,8 @@ items:
           href: compiler-errors-2/compiler-error-c2953.md
         - name: Compiler error C2955
           href: compiler-errors-2/compiler-error-c2955.md
+        - name: Compiler error C2956
+          href: compiler-errors-2/compiler-error-c2956.md
         - name: Compiler error C2957
           href: compiler-errors-2/compiler-error-c2957.md
         - name: Compiler error C2958
