--- a/docs/mfc/toc.yml
+++ b/docs/mfc/toc.yml
@@ -2918,5 +2918,7 @@ items:
           href: reference/details-of-atl-support-added-by-the-atl-wizard.md
     - name: Add a method to an IDL interface in a MFC project
       href: reference/add-idl-mfc-method-wizard.md
+    - name: Add a property to an IDL interface in a MFC project
+      href: reference/add-interface-definition-library-mfc-property-wizard.md 
     - name: MFC class wizard
       href: reference/mfc-class-wizard.md    
