--- a/docs/ide/toc.yml
+++ b/docs/ide/toc.yml
@@ -78,6 +78,8 @@ items:
       href: ../ide/adding-a-member-variable-visual-cpp.md
     - name: Add a method
       href: ../ide/adding-a-method-visual-cpp.md
+    - name: Add an IDL method
+      href: ../ide/add-interface-definition-library-method-wizard.md 
     - name: Add a property
       href: ../ide/adding-a-property-visual-cpp.md
     - name: Add an event
