Add container-overflow ASAN error page (#4226)
* Update known issues section on standard library support to mention existing vector annotation support.

* Write up container-overflow page and put error/support information there instead. Known issues only mentions that the support is partial but still useful now without annotations.

* Add example image

* Use standard "for more info" form

* Edits and Acrolinx fixes

* Update docs/sanitizers/error-container-overflow.md

Co-authored-by: Colin Robertson <corob@microsoft.com>
Co-authored-by: Tracey Torble <v-trtorb@microsoft.com>

--- a/docs/sanitizers/toc.yml
+++ b/docs/sanitizers/toc.yml
@@ -27,6 +27,8 @@ items:
           href: ../sanitizers/error-allocation-size-too-big.md
         - name: "calloc-overflow error"
           href: ../sanitizers/error-calloc-overflow.md
+        - name: "container-overflow error"
+          href: ../sanitizers/error-container-overflow.md
         - name: "double-free error"
           href: ../sanitizers/error-double-free.md
         - name: "dynamic-stack-buffer-overflow error"
