Fix cpp-docs 3815 3898 3901 3902

--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -4559,6 +4559,8 @@ items:
       href: tool-errors/linker-tools-error-lnk1168.md
     - name: Linker tools error LNK1169
       href: tool-errors/linker-tools-error-lnk1169.md
+    - name: Linker tools error LNK1170
+      href: tool-errors/linker-tools-error-lnk1170.md
     - name: Linker tools error LNK1179
       href: tool-errors/linker-tools-error-lnk1179.md
     - name: Linker tools error LNK1181
